fix reviews body overflow

--- a/frontend/src/components/ListingReviews/ListingReviews.css
+++ b/frontend/src/components/ListingReviews/ListingReviews.css
@@ -43,4 +43,8 @@
 .show-review-body {
     font-size: 16.5px;
     line-height: 24px;
+    max-width: 100%;
+    word-wrap: break-word;
+    max-height: 160px;
+    overflow: scroll;
 }
